doco improvements
